# noethersolve

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  ORACLE_METHODOLOGY.md  README.md  autonomy_loop.py  blueprint_training.json  claim.py  claims.json  conservation_checker.py  dashboard.py  download_27b.py  em_checker.py  merge_adapters.py  noether_monitor.py  noethersolve_torch.py  oracle_wrapper.py  program.md  pyproject.toml  requirements.txt  run_haiku_benchmark.py  run_teacher_student.py  test_haiku_tools.py  test_n9_entropy_wall.py  train_choreography_adapter.py  train_ranking_quick.py  train_ranking_v2.py  train_vortex_adapter.py  vortex_checker.py  vortex_synthetic_25.json  weighted_distance_training.json
.claude/: settings.json
adapters/: analysis_pde_conjectures_orthogonal_routing.json  continuous_qf_orthogonal_routing.json  kinetic_k_orthogonal_routing.json
experiments/: adapter_discovery_probe.py  adapter_generation_14b_instruct.py  adapter_hypothesis_engine.py  adapter_transfer_benchmark.py  adapter_vs_steering_test.py  analyze_distractor_patterns.py  benchmark_stage_discovery.py  benchmark_steering.py  benchmark_toolkit_adapter.py  bio_ai_convergence_analysis.py  bio_inspired_dropout_test.py  build_meta_router_data.py  build_router.py  build_steering_bank.py  build_steering_bank_v2.py  correlate_length_baseline.py  corruption_benchmark.py  eval_standard.py  extract_all_steering_vectors.py  extract_vectors_fast.py  focused_hypothesis_claims.json  frank_experiments_v3.py  frank_experiments_v3b.py  generate_meta_router_training.py  generate_toolkit_facts.py  hidden_adapter_diagnostic_14b.py  ideology_adapter_diagnostics.py  ideology_escalation.py  ideology_fixed_grad.py  ideology_full_fixed.py  ideology_gradient_probe.py  ideology_memorization_test.py  ideology_micro_test.py  ideology_orthogonal_routed.py  ns_bound_eval.json  ns_bound_train.json  ns_enstrophy_bound_target.json  rebuild_steering_bank.py  retrain_failed_clusters.py  run_full_oracle_benchmark.py  (+28 more)
labs/: DATA_SOURCES.md  LAB_CATALOG.md  ai_safety_lab.py  battery_materials_lab.py  behavioral_economics_lab.py  bio_ai_lab.py  catalyst_lab.py  climate_lab.py  conservation_mining_lab.py  drug_therapy_lab.py  epidemic_lab.py  genetic_therapeutics_lab.py  origin_of_life_lab.py  quantum_mechanics_lab.py  supply_chain_lab.py  topological_lab.py
monitors/: __init__.py  e2_symmetric_poly.py  sum_pairwise_distances.py
noethersolve/: __init__.py  adapter.py  adapter_router.py  aggregation.py  antibody_developability.py  atmospheric_electricity.py  audit_chem.py  audit_facts.py  audit_sequence.py  autonomy_analysis.py  battery_degradation.py  behavioral_finance.py  bio_ai_bridge.py  biochemistry.py  blind_spot_detector.py  blind_spots.json  c_elegans_behavior.py  catalysis.py  catalysis_hub_api.py  catalyst_data_source.py  chembl_api.py  chemistry_calc.py  chemotaxis_model.py  code_verifiers.py  cold_fusion.py  collective_behavior.py  complexity.py  conjecture_status.py  control.py  crispr.py  crypto_calc.py  deadlock_detailed_balance.py  delivery_optimization.py  derivation_verifier.py  dimension_physics.py  disease_data_source.py  distributed_calc.py  domain_utils.py  drug_data_source.py  drug_interactions.py  (+85 more)
paper/: PAPER_PIPELINE.md  breaking_frozen_priors.md  length_ratio_oracle_bias.md  noethersolve_toolkit.md  unified_oracle_difficulty_theory.md
papers/: README.md
problems/: 3body_candidates.json  aging_biology.yaml  (+290 more)
(+823 files in other folders)
