[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noethersolve"
version = "0.6.0"
description = "Automated scientific discovery: use LLM knowledge gaps as a compass to find underexplored science."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["autoresearch", "scientific-discovery", "llm", "conservation-laws", "adapters"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.18",
    "mlx-lm>=0.18",
]
torch = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.28",
]
auto = [
    "anthropic>=0.40",
]
dashboard = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["noethersolve*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
